# Movar_cpp

./: CMakeLists.txt  README.md  README.rst  adaptedcompleter.cpp  adaptedcompleter.h  adaptedstringlistmodel.cpp  adaptedstringlistmodel.h  dictionarysettings.cpp  dictionarysettings.h  dictionarysettings.ui  fileloader.cpp  fileloader.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
.github/workflows/: MyFirstWorkflow.yml  cmake-multi-platform.yml
translations/: Movar_cpp_en_US.ts  Movar_cpp_ja_JP.ts  Movar_cpp_uk_UA.ts
